#980810 by tim.plunkett: Added option to use fullcalendar.min.js.
#980886 by aspilicious, tim.plunkett: Move FullCalendar plugin out of module into sites/all/libraries.
#933622 by tim.plunkett: Port drag-and-drop to Drupal 7.
#933622 by tim.plunkett: Port to Drupal 7.

FullCalendar 6.x-2.x, xxxx-xx-xx
--------------------------------
#1133486 by aspilicious: Hide fallback with CSS if JS is enabled.
#1132472 by tim.plunkett: Allow changing Time display in Month View.
#1130956 by tim.plunkett: Re-add support for timestamps.
#1131028 by aspilicious, tim.plunkett: Replace theme_fullcalendar_classname with hook and alter.
#1081488 by tim.plunkett: Fix calculation of the views dom id.
#1047962 by tim.plunkett: Use new area handler for empty calendars.
#1003602 by tim.plunkett: Rename views plugins and reorganize files.
#1123398 by tim.plunkett: Add JS/CSS only when needed.
#1050530 by aspilicious: Added target window.
#1045114 by aspilicious: Improved UI strings.
#910494 by aspilicious: Improved Colorbox support.
#1044426 by aspilicious: Added RTL support.
#1055978 by tim.plunket: Cleanup for multiple calendars fix.
#1055978 by aspilicious: Fix multiple calendars per page.
#1036444 by aspilicious, tim.plunkett: Backport fields row style from D7.
#1032980 by aspilicious: Improved default styling for fullcalendar.
#1035246 by aspilicious: Fixed incompatiblity with Views 6.x-3.x.
#1038822 by wildpoppy: Fixed extra closing H3 tag.
#1038442 by aspilicious: JS clean-up.
#1039912 by tim.plunkett: Fixed FullCalendar doubling on page.
#1011696 by aspilicious: Fixed drag-and-drop for subdomains.
#980180 follow-up by aspilicious: Extra trailing comma breaks fullcalendar in IE 7 & IE 6.
#1033858 by aspilicious: Added translation support.
by tim.plunkett: Updated CHANGELOG.txt.

FullCalendar 6.x-1.x, xxxx-xx-xx
--------------------------------
#1038822 by wildpoppy: Fixed extra closing H3 tag.
#1038442 by aspilicious: JS clean-up.